Update docs for new code folder structure

--- a/classes/_extras_.legoport.html
+++ b/classes/_extras_.legoport.html
@@ -128,6 +128,7 @@
 								<li class="tsd-kind-property tsd-parent-kind-class tsd-is-inherited tsd-is-external"><a href="_extras_.legoport.html#connected" class="tsd-kind-icon">connected</a></li>
 								<li class="tsd-kind-property tsd-parent-kind-class tsd-is-inherited tsd-is-external"><a href="_extras_.legoport.html#devicedirname" class="tsd-kind-icon">device<wbr>Dir<wbr>Name</a></li>
 								<li class="tsd-kind-property tsd-parent-kind-class tsd-is-inherited tsd-is-external"><a href="_extras_.legoport.html#deviceroot" class="tsd-kind-icon">device<wbr>Root</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-class tsd-is-inherited tsd-is-static tsd-is-external"><a href="_extras_.legoport.html#overridesysclassdir" class="tsd-kind-icon">override<wbr>Sys<wbr>Class<wbr>Dir</a></li>
 							</ul>
 						</section>
 						<section class="tsd-index-section tsd-is-external">
@@ -173,7 +174,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/extras.ts#L349">extras.ts:349</a></li>
+									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/develop/src/extras.ts#L349">extras.ts:349</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -195,7 +196,7 @@
 					<div class="tsd-signature tsd-kind-icon">_device<wbr>Index<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/extras.ts#L346">extras.ts:346</a></li>
+							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/develop/src/extras.ts#L346">extras.ts:346</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -206,7 +207,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="_io_.device.html">Device</a>.<a href="_io_.device.html#connected">connected</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/io.ts#L40">io.ts:40</a></li>
+							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/develop/src/io.ts#L42">io.ts:42</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -217,7 +218,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="_io_.device.html">Device</a>.<a href="_io_.device.html#devicedirname">deviceDirName</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/io.ts#L39">io.ts:39</a></li>
+							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/develop/src/io.ts#L41">io.ts:41</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -228,7 +229,18 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="_io_.device.html">Device</a>.<a href="_io_.device.html#deviceroot">deviceRoot</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/io.ts#L38">io.ts:38</a></li>
+							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/develop/src/io.ts#L40">io.ts:40</a></li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class tsd-is-inherited tsd-is-static tsd-is-external">
+					<a name="overridesysclassdir" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagStatic">Static</span> override<wbr>Sys<wbr>Class<wbr>Dir</h3>
+					<div class="tsd-signature tsd-kind-icon">override<wbr>Sys<wbr>Class<wbr>Dir<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
+					<aside class="tsd-sources">
+						<p>Inherited from <a href="_io_.device.html">Device</a>.<a href="_io_.device.html#overridesysclassdir">overrideSysClassDir</a></p>
+						<ul>
+							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/develop/src/io.ts#L38">io.ts:38</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -245,7 +257,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/extras.ts#L399">extras.ts:399</a></li>
+									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/develop/src/extras.ts#L399">extras.ts:399</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -268,7 +280,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/extras.ts#L347">extras.ts:347</a></li>
+									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/develop/src/extras.ts#L347">extras.ts:347</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">number</span></h4>
@@ -285,7 +297,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/extras.ts#L365">extras.ts:365</a></li>
+									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/develop/src/extras.ts#L365">extras.ts:365</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -309,7 +321,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/extras.ts#L382">extras.ts:382</a></li>
+									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/develop/src/extras.ts#L382">extras.ts:382</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -325,7 +337,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/extras.ts#L391">extras.ts:391</a></li>
+									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/develop/src/extras.ts#L391">extras.ts:391</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -356,7 +368,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/extras.ts#L372">extras.ts:372</a></li>
+									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/develop/src/extras.ts#L372">extras.ts:372</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -378,7 +390,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/extras.ts#L410">extras.ts:410</a></li>
+									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/develop/src/extras.ts#L410">extras.ts:410</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -410,7 +422,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/extras.ts#L420">extras.ts:420</a></li>
+									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/develop/src/extras.ts#L420">extras.ts:420</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -439,7 +451,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_io_.device.html">Device</a>.<a href="_io_.device.html#connect">connect</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/io.ts#L44">io.ts:44</a></li>
+									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/develop/src/io.ts#L46">io.ts:46</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -474,7 +486,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_io_.device.html">Device</a>.<a href="_io_.device.html#constructpropertypath">constructPropertyPath</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/io.ts#L90">io.ts:90</a></li>
+									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/develop/src/io.ts#L94">io.ts:94</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -501,7 +513,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_io_.device.html">Device</a>.<a href="_io_.device.html#readnumber">readNumber</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/io.ts#L94">io.ts:94</a></li>
+									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/develop/src/io.ts#L98">io.ts:98</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -528,7 +540,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_io_.device.html">Device</a>.<a href="_io_.device.html#readproperty">readProperty</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/io.ts#L125">io.ts:125</a></li>
+									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/develop/src/io.ts#L129">io.ts:129</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -555,7 +567,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_io_.device.html">Device</a>.<a href="_io_.device.html#readstring">readString</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/io.ts#L103">io.ts:103</a></li>
+									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/develop/src/io.ts#L107">io.ts:107</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -582,7 +594,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_io_.device.html">Device</a>.<a href="_io_.device.html#readstringarray">readStringArray</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/io.ts#L108">io.ts:108</a></li>
+									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/develop/src/io.ts#L112">io.ts:112</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -609,7 +621,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_io_.device.html">Device</a>.<a href="_io_.device.html#readstringselector">readStringSelector</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/io.ts#L114">io.ts:114</a></li>
+									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/develop/src/io.ts#L118">io.ts:118</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -636,7 +648,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_io_.device.html">Device</a>.<a href="_io_.device.html#set">set</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/io.ts#L170">io.ts:170</a></li>
+									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/develop/src/io.ts#L174">io.ts:174</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -660,7 +672,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_io_.device.html">Device</a>.<a href="_io_.device.html#setnumber">setNumber</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/io.ts#L162">io.ts:162</a></li>
+									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/develop/src/io.ts#L166">io.ts:166</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -687,7 +699,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_io_.device.html">Device</a>.<a href="_io_.device.html#setproperty">setProperty</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/io.ts#L148">io.ts:148</a></li>
+									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/develop/src/io.ts#L152">io.ts:152</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -714,7 +726,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_io_.device.html">Device</a>.<a href="_io_.device.html#setstring">setString</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/io.ts#L166">io.ts:166</a></li>
+									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/develop/src/io.ts#L170">io.ts:170</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -788,6 +800,9 @@
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-class tsd-is-inherited tsd-is-external">
 								<a href="_extras_.legoport.html#deviceroot" class="tsd-kind-icon">device<wbr>Root</a>
+							</li>
+							<li class=" tsd-kind-property tsd-parent-kind-class tsd-is-inherited tsd-is-static tsd-is-external">
+								<a href="_extras_.legoport.html#overridesysclassdir" class="tsd-kind-icon">override<wbr>Sys<wbr>Class<wbr>Dir</a>
 							</li>
 							<li class=" tsd-kind-get-signature tsd-parent-kind-class tsd-is-external">
 								<a href="_extras_.legoport.html#address" class="tsd-kind-icon">address</a>
