--- a/classes/_sensors_.lightsensor.html
+++ b/classes/_sensors_.lightsensor.html
@@ -107,6 +107,7 @@
 								<li class="tsd-kind-property tsd-parent-kind-class tsd-is-inherited tsd-is-external"><a href="_sensors_.lightsensor.html#connected" class="tsd-kind-icon">connected</a></li>
 								<li class="tsd-kind-property tsd-parent-kind-class tsd-is-inherited tsd-is-external"><a href="_sensors_.lightsensor.html#devicedirname" class="tsd-kind-icon">device<wbr>Dir<wbr>Name</a></li>
 								<li class="tsd-kind-property tsd-parent-kind-class tsd-is-inherited tsd-is-external"><a href="_sensors_.lightsensor.html#deviceroot" class="tsd-kind-icon">device<wbr>Root</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-class tsd-is-inherited tsd-is-static tsd-is-external"><a href="_sensors_.lightsensor.html#overridesysclassdir" class="tsd-kind-icon">override<wbr>Sys<wbr>Class<wbr>Dir</a></li>
 							</ul>
 						</section>
 						<section class="tsd-index-section tsd-is-external">
@@ -160,7 +161,7 @@
 							<aside class="tsd-sources">
 								<p>Overwrites <a href="_sensors_.sensor.html">Sensor</a>.<a href="_sensors_.sensor.html#constructor">constructor</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/sensors.ts#L358">sensors.ts:358</a></li>
+									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/develop/src/sensors.ts#L358">sensors.ts:358</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -183,7 +184,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="_sensors_.sensorbase.html">SensorBase</a>.<a href="_sensors_.sensorbase.html#_deviceindex">_deviceIndex</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/sensors.ts#L5">sensors.ts:5</a></li>
+							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/develop/src/sensors.ts#L5">sensors.ts:5</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -194,7 +195,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="_io_.device.html">Device</a>.<a href="_io_.device.html#connected">connected</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/io.ts#L40">io.ts:40</a></li>
+							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/develop/src/io.ts#L42">io.ts:42</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -205,7 +206,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="_io_.device.html">Device</a>.<a href="_io_.device.html#devicedirname">deviceDirName</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/io.ts#L39">io.ts:39</a></li>
+							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/develop/src/io.ts#L41">io.ts:41</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -216,7 +217,18 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="_io_.device.html">Device</a>.<a href="_io_.device.html#deviceroot">deviceRoot</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/io.ts#L38">io.ts:38</a></li>
+							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/develop/src/io.ts#L40">io.ts:40</a></li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class tsd-is-inherited tsd-is-static tsd-is-external">
+					<a name="overridesysclassdir" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagStatic">Static</span> override<wbr>Sys<wbr>Class<wbr>Dir</h3>
+					<div class="tsd-signature tsd-kind-icon">override<wbr>Sys<wbr>Class<wbr>Dir<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
+					<aside class="tsd-sources">
+						<p>Inherited from <a href="_io_.device.html">Device</a>.<a href="_io_.device.html#overridesysclassdir">overrideSysClassDir</a></p>
+						<ul>
+							<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/develop/src/io.ts#L38">io.ts:38</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -234,7 +246,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_sensors_.sensor.html">Sensor</a>.<a href="_sensors_.sensor.html#address">address</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/sensors.ts#L135">sensors.ts:135</a></li>
+									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/develop/src/sensors.ts#L135">sensors.ts:135</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -257,7 +269,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/sensors.ts#L375">sensors.ts:375</a></li>
+									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/develop/src/sensors.ts#L375">sensors.ts:375</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -280,7 +292,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_sensors_.sensor.html">Sensor</a>.<a href="_sensors_.sensor.html#command">command</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/sensors.ts#L73">sensors.ts:73</a></li>
+									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/develop/src/sensors.ts#L73">sensors.ts:73</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -309,7 +321,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_sensors_.sensor.html">Sensor</a>.<a href="_sensors_.sensor.html#commands">commands</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/sensors.ts#L81">sensors.ts:81</a></li>
+									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/develop/src/sensors.ts#L81">sensors.ts:81</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -333,7 +345,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_sensors_.sensor.html">Sensor</a>.<a href="_sensors_.sensor.html#decimals">decimals</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/sensors.ts#L89">sensors.ts:89</a></li>
+									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/develop/src/sensors.ts#L89">sensors.ts:89</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -357,7 +369,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_sensors_.sensorbase.html">SensorBase</a>.<a href="_sensors_.sensorbase.html#deviceindex">deviceIndex</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/sensors.ts#L6">sensors.ts:6</a></li>
+									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/develop/src/sensors.ts#L6">sensors.ts:6</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">number</span></h4>
@@ -375,7 +387,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_sensors_.sensor.html">Sensor</a>.<a href="_sensors_.sensor.html#drivername">driverName</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/sensors.ts#L97">sensors.ts:97</a></li>
+									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/develop/src/sensors.ts#L97">sensors.ts:97</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -400,7 +412,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_sensors_.sensor.html">Sensor</a>.<a href="_sensors_.sensor.html#mode">mode</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/sensors.ts#L105">sensors.ts:105</a></li>
+									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/develop/src/sensors.ts#L105">sensors.ts:105</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -415,7 +427,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_sensors_.sensor.html">Sensor</a>.<a href="_sensors_.sensor.html#mode">mode</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/sensors.ts#L112">sensors.ts:112</a></li>
+									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/develop/src/sensors.ts#L112">sensors.ts:112</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -445,7 +457,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_sensors_.sensor.html">Sensor</a>.<a href="_sensors_.sensor.html#modes">modes</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/sensors.ts#L119">sensors.ts:119</a></li>
+									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/develop/src/sensors.ts#L119">sensors.ts:119</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -468,7 +480,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_sensors_.sensor.html">Sensor</a>.<a href="_sensors_.sensor.html#numvalues">numValues</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/sensors.ts#L127">sensors.ts:127</a></li>
+									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/develop/src/sensors.ts#L127">sensors.ts:127</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -491,7 +503,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/sensors.ts#L367">sensors.ts:367</a></li>
+									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/develop/src/sensors.ts#L367">sensors.ts:367</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -514,7 +526,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_sensors_.sensor.html">Sensor</a>.<a href="_sensors_.sensor.html#units">units</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/sensors.ts#L143">sensors.ts:143</a></li>
+									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/develop/src/sensors.ts#L143">sensors.ts:143</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -541,7 +553,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_io_.device.html">Device</a>.<a href="_io_.device.html#connect">connect</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/io.ts#L44">io.ts:44</a></li>
+									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/develop/src/io.ts#L46">io.ts:46</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -576,7 +588,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_io_.device.html">Device</a>.<a href="_io_.device.html#constructpropertypath">constructPropertyPath</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/io.ts#L90">io.ts:90</a></li>
+									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/develop/src/io.ts#L94">io.ts:94</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -603,7 +615,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_sensors_.sensor.html">Sensor</a>.<a href="_sensors_.sensor.html#getfloatvalue">getFloatValue</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/sensors.ts#L64">sensors.ts:64</a></li>
+									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/develop/src/sensors.ts#L64">sensors.ts:64</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -627,7 +639,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_sensors_.sensor.html">Sensor</a>.<a href="_sensors_.sensor.html#getvalue">getValue</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/sensors.ts#L60">sensors.ts:60</a></li>
+									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/develop/src/sensors.ts#L60">sensors.ts:60</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -651,7 +663,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_io_.device.html">Device</a>.<a href="_io_.device.html#readnumber">readNumber</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/io.ts#L94">io.ts:94</a></li>
+									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/develop/src/io.ts#L98">io.ts:98</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -678,7 +690,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_io_.device.html">Device</a>.<a href="_io_.device.html#readproperty">readProperty</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/io.ts#L125">io.ts:125</a></li>
+									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/develop/src/io.ts#L129">io.ts:129</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -705,7 +717,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_io_.device.html">Device</a>.<a href="_io_.device.html#readstring">readString</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/io.ts#L103">io.ts:103</a></li>
+									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/develop/src/io.ts#L107">io.ts:107</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -732,7 +744,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_io_.device.html">Device</a>.<a href="_io_.device.html#readstringarray">readStringArray</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/io.ts#L108">io.ts:108</a></li>
+									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/develop/src/io.ts#L112">io.ts:112</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -759,7 +771,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_io_.device.html">Device</a>.<a href="_io_.device.html#readstringselector">readStringSelector</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/io.ts#L114">io.ts:114</a></li>
+									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/develop/src/io.ts#L118">io.ts:118</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -786,7 +798,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_io_.device.html">Device</a>.<a href="_io_.device.html#set">set</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/io.ts#L170">io.ts:170</a></li>
+									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/develop/src/io.ts#L174">io.ts:174</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -810,7 +822,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_io_.device.html">Device</a>.<a href="_io_.device.html#setnumber">setNumber</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/io.ts#L162">io.ts:162</a></li>
+									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/develop/src/io.ts#L166">io.ts:166</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -837,7 +849,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_io_.device.html">Device</a>.<a href="_io_.device.html#setproperty">setProperty</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/io.ts#L148">io.ts:148</a></li>
+									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/develop/src/io.ts#L152">io.ts:152</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -864,7 +876,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_io_.device.html">Device</a>.<a href="_io_.device.html#setstring">setString</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/master/io.ts#L166">io.ts:166</a></li>
+									<li>Defined in <a href="https://github.com/WasabiFan/ev3dev-lang-js/blob/develop/src/io.ts#L170">io.ts:170</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -944,6 +956,9 @@
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-class tsd-is-inherited tsd-is-external">
 								<a href="_sensors_.lightsensor.html#deviceroot" class="tsd-kind-icon">device<wbr>Root</a>
+							</li>
+							<li class=" tsd-kind-property tsd-parent-kind-class tsd-is-inherited tsd-is-static tsd-is-external">
+								<a href="_sensors_.lightsensor.html#overridesysclassdir" class="tsd-kind-icon">override<wbr>Sys<wbr>Class<wbr>Dir</a>
 							</li>
 							<li class=" tsd-kind-get-signature tsd-parent-kind-class tsd-is-inherited tsd-is-external">
 								<a href="_sensors_.lightsensor.html#address" class="tsd-kind-icon">address</a>
